# HRI-Rob-The-Pupper

./: README.md  gui_ssh.py  gui_test_ssh2.py  key.txt  requirements.txt
Lab1/: turtle_sensor.py
feedback/: feedback.py
lab1/: setup.py
lab1/lab1/: turtle_sensor.py
lab2/: client_go_pupper.py  package.xml  setup.py
lab2/lab2/: feedback.py  gui_pupper_client.py  gui_pupper_client2.py  gui_pupper_client_ssh.py  gui_pupper_service.py  gui_test.py  gui_test_ssh.py  gui_test_ssh2.py  run.bash  saveImg.py
lab2/launch/: bringup.launch.py
robthepupper/: CMakeLists.txt  commands.txt  package.xml  setup.cfg  setup.py
robthepupper/launch/: bringup.launch.py
robthepupper/robthepupper/: gui_pupper_client_ssh.py  gui_pupper_service.py  saveImg.py
